--- a/index.html
+++ b/index.html
@@ -7,29 +7,39 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="Description" content="天气美搭-潮百搭" />
     <title>天气美搭-潮百搭</title>
-    <link rel="stylesheet" type="text/css" href="./static/src/stylesheets/common.css" />
+    <link rel="stylesheet" type="text/css" href="./static/jquerymobile/jquery.mobile-1.4.0.min.css" />
+    <link rel="stylesheet" type="text/css" href="./static/src/stylesheets/common.css" />  
     <link rel="stylesheet" type="text/css" href="./static/src/stylesheets/index.css" />
 </head>
 <body>
     <div id="gloabLoading"><img src="./static/src/images/loading.gif" class="loading"/><br /><span class="loadingTxt">loading...</span></div>
-    <section data-role="page" id="weaterWrapper" class="appPage"></section>
-    <div data-role="page" id="index" class="appPage" style="display:none;" >
-    <div id="watchPosition"><a id="watchPositionBtn" data-open="false" href="javascript:;">点击检测位置变化</a></div>
-        <div>当前位置：</div>
-        <div><span>标题：</span><span id="headingContainer"></span></div>
-        <div><span>维度：</span><span id="latitudeContainer"></span></div>
-        <div><span>经度：</span><span id="longitudeContainer"></span></div>
-        <div><span>准确性：</span><span id="accuracyContainer"></span></div>
-        <div id="errorContainer">获取位置失败</div>
-    </div>
+    <nav id="indexNav"></nav>
+    <section data-role="page" id="index" class="appPage indexPage">
+        <div style="display:none;"><input id="userCity" placeholder="请输入城市" /><button id="sendCityBtn">确定</button></div>
+        <div id="currentWeaterContainer"></div>
+        <div id="currentWeaterSetContainer"></div>        
+        <div id="searchCityWeaterContainer">搜索结果</div>
+    </section>
+    <section data-role="page" id="trend" class="appPage trendPage">
+        <header>趋势</header>
+    </section>
+    <section data-role="page" id="dynamic" class="appPage dynamicPage">
+        <header>动态</header>
+    </section>
+    <section data-role="page" id="clock" class="appPage clockPage">
+        <header>闹钟</header>
+    </section>
+    <section data-role="page" id="myself" class="appPage myselfPage">
+        <header>我</header>
+    </section>
     <script src="./sea-modules/seajs/seajs/2.1.1/sea.js" id="seajsnode"></script>
     <script>
         var prefix = "cbdapp",version=1;
         window.appConfig = {
-            debug:false,
+            debug:true,
             appHost:''
         }
-        if(window.appConfig.debug === false){
+        if(window.appConfig.debug === true){
             window.appConfig.appHost = 'http://192.168.1.11:6300';
             // window.appConfig.appHost = 'http://192.168.1.68:6300';
         }   
@@ -38,7 +48,9 @@
             base: "./",
             alias: {
                 "zepto":"sea-modules/gallery/zepto/1.1.2/zepto-debug",
-                "$":"sea-modules/gallery/zepto/1.1.2/zepto-debug",
+                // "$":"sea-modules/gallery/zepto/1.1.2/zepto-debug",
+                // "jquery": "sea-modules/jquery/jquery/2.0.3/jquery-debug",
+                // "jqmobile": "sea-modules/jquery/jquerymobile/1.4.0/jquerymobile-debug",
                 "underscore": "sea-modules/gallery/underscore/1.5.2/underscore-debug",
                 "backbone": "sea-modules/gallery/backbone/1.1.0/backbone-debug"
             },
