--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <div id="searchCityWeaterContainer">搜索结果</div>
     </section>
     <section data-role="page" id="trend" class="appPage trendPage">
-        <header>趋势</header>
+        <img class="bgImg" src="./static/src/images/nav2_bg.jpg" />
     </section>
     <section data-role="page" id="dynamic" class="appPage dynamicPage">
-        <header>动态</header>
+        <img class="bgImg" src="./static/src/images/nav3_bg.jpg" />
     </section>
     <section data-role="page" id="clock" class="appPage clockPage">
-        <header>闹钟</header>
+        <img class="bgImg" src="./static/src/images/nav4_bg.jpg" />
     </section>
     <section data-role="page" id="myself" class="appPage myselfPage">
-        <header>我</header>
+        <img class="bgImg" src="./static/src/images/nav5_bg.jpg" />
     </section>
     <script src="./sea-modules/seajs/seajs/2.1.1/sea.js" id="seajsnode"></script>
     <script>
